--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
   firebase_storage: ^11.2.1
+  video_player: ^2.6.1
+  video_compress: ^3.1.2
 
 dev_dependencies:
   flutter_test:
