change duration of scroll page view builder and move auth controller to main

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -10,6 +10,11 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app needs permission for using your phone microphone to capture image</string>
 	
+	<key>NSAppTransportSecurity</key>  
+	<dict>  
+		<key>NSAllowsArbitraryLoads</key><true/>  
+	</dict>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
